data/derived/comb/progs/unify/prog6456.ml.out
Characters 123-124:
  | h::t -> let x=List.mem(h,seen) in if x then helper(seen',t)
                                         ^
Error: This expression has type ('a * 'b) list -> bool
       but an expression was expected of type bool
